# Obsidian

./: .gitignore  Dockerfile  LICENSE  README.md  a.out  dune-project  install.py  meson.build  todo.txt
.cache/clangd/index/: ast.cpp.BD0F44A090E895E9.idx  ast.hpp.4E0AE03BAE530A05.idx  lexer.cpp.F505A74F60373A31.idx  lexer.hpp.E401AD80244BBBB7.idx  main.cpp.C8D87940853E5AD7.idx  parser.cpp.B36D9CB7AADBB627.idx  parser.hpp.059AD13566BBA973.idx  reporter.cpp.EA00587786E2DFEF.idx  reporter.hpp.15D4D1F8ABC9F456.idx  termcolor.hpp.9E0C6FBD06C64F03.idx
.github/workflows/: ci.yaml
compiler/: main.cpp
compiler/diagnostics/: reporter.cpp  reporter.hpp
compiler/lexer/: lexer.cpp  lexer.hpp
compiler/parser/: ast.cpp  ast.hpp  parser.cpp  parser.hpp
compiler/util/: util.cpp  util.hpp
docs/: snippets.md
docs/project/: faq.md  milestones.md
examples/: array.ob  calculator.ob  casting.ob  claculator.ob  classes.ob  concat.ob  control-flow.ob  enum.ob  examples.ob  fib.ob  first-test.ob  functions.ob  hello.ob  math.ob  power.ob  random.ob  sample.ob  simple.ob  string.ob  struct.ob  ternary.ob  test.ob  unsafe.ob
lib/: ast.ml  ast.mli  codegen.ml  codegen.mli  dune  lexer.mll  parser.mly  typechecker.ml  typechecker.mli  version.ml
lib/syntax/: ast.ml  ast.mli  codegen.ml  codegen.mli  dune  lexer.mli  lexer.mll  parser.mly  typechecker.ml  typechecker.mli  version.ml  version.mli
