project('obsidian', 'cpp', version: '0.1.0', default_options: ['cpp_std=c++17'])

sources = [
    'compiler/main.cpp',
    'compiler/diagnostics/reporter.cpp',
    'compiler/lexer/lexer.cpp',
    'compiler/parser/parser.cpp',
    'compiler/parser/ast.cpp',
    'compiler/util/util.cpp'
]

executable('obsidian', sources)