(library
 (name obsidianlib)
 (modules ast typechecker codegen lexer parser version)
 (libraries ppx_deriving.show llvm)
 (preprocess
  (pps ppx_deriving.show))
 (flags :standard)
 (modes native))

(documentation)

(ocamllex lexer)

(menhir
 (modules parser))

(env
 (dev
  (flags
   (:standard -w +a-4)))
 (release
  (flags
   (:standard -w -03))))
